syntax = "proto3";

package project.planton.provider.gcp.gcpcloudrun.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/gcp/gcpcloudrun/v1/spec.proto";
import "project/planton/provider/gcp/gcpcloudrun/v1/stack_outputs.proto";
import "project/planton/shared/shared.proto";

//gcp-cloud-run
message GcpCloudRun {
  //api-version
  string api_version = 1[
    (buf.validate.field).string.const = 'gcp.project-planton.org/v1'
  ];

  //resource-kind
  string kind = 2;

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3 [
    (buf.validate.field).required = true,
    (buf.validate.field).cel = {
      id: "metadata.name",
      message: "Name must be a Valid Bucket Name on AWS/GCP/AZURE/Others",
      //https://regex101.com/r/d1Viju/1
      expression: "this.name.matches('^[a-z0-9](?:[a-z0-9_-]*[a-z0-9])?$')"
    },
    (buf.validate.field).cel = {
      id: "metadata.name",
      message: "Name must be between 3 and 63 characters long",
      expression: "size(this.name) > 2 && size(this.name) <= 63"
    },
    (buf.validate.field).cel = {
      id: "metadata.version.message",
      message: "Version message is mandatory and cannot be empty",
      expression: "has(this.version.message)"
    }
  ];

  //spec
  GcpCloudRunSpec spec = 4 [
    (buf.validate.field).required = true
  ];

  //status
  GcpCloudRunStatus status = 5;
}

//gcp-cloud-run status
message GcpCloudRunStatus {
  //lifecycle
  project.planton.shared.ApiResourceLifecycle lifecycle = 99;

  //audit-info
  project.planton.shared.ApiResourceAudit audit = 98;

  //stack-job id
  string stack_job_id = 97;

  //stack-outputs
  GcpCloudRunStackOutputs stack_outputs = 1;
}
